name:                dep-software
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/dep-software#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2021 Willem Van Onsem
category:            work
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
     Dep.Core
   , Dep.Bricks.Box
   , Dep.Bricks.Circuit
   , Dep.Bricks.Gate
   , Dep.Bricks.Karnaugh
   , Dep.Bricks.Layout
   , Dep.Bricks.Negation
   , Dep.Data.Three
   , Dep.Data.ThreeValue
  default-language: Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , brick >= 0.50
    , lens >=4.0
    , QuickCheck
    , vty >= 5.32

executable dep-software
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
  default-language:    Haskell2010
  ghc-options: -rtsopts -threaded
  build-depends:
      base >= 4.7 && < 5
    , dep-software
    , brick >= 0.50
