name:                dep-software
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/dep-software#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2021 Willem Van Onsem
category:            work
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
     Dep.Algorithm.Synthesis
   , Dep.Bricks.Box
   , Dep.Bricks.Circuit
   , Dep.Bricks.Gate
   , Dep.Bricks.Karnaugh
   , Dep.Bricks.Layout
   , Dep.Bricks.Negation
   , Dep.Bricks.Utils
   , Dep.Class.Opposite
   , Dep.Class.Mergeable
   , Dep.Class.NonDeterministicWalkable
   , Dep.Class.Renderable
   , Dep.Class.Walkable
   , Dep.Data.GraySequence
   , Dep.Data.LogicItem
   , Dep.Data.Product
   , Dep.Data.Sum
   , Dep.Data.Three
   , Dep.Data.ThreeValue
   , Dep.Utils
  default-language: Haskell2010
  build-tool-depends:
      liquidhaskell:liquidhaskell >=0.8.10
  build-depends:
      base >= 4.7 && < 5
    , blaze-markup >= 0.5.0.0
    , binary >= 0.2
    , brick >= 0.50
    , data-default >=0.2
    , Diff >= 0.3 && < 0.4
    , hashable >=1.2.7.0
    , lens >= 4.0
    , parsec >=3.0
    , QuickCheck
    , template-haskell >=2.16.0.0
    , text >=0.1
    , unicode-tricks >=0.1
    , vty >= 5.32

executable dep-software
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
  default-language:    Haskell2010
  ghc-options: -rtsopts -threaded
  build-depends:
      base >= 4.7 && < 5
    , dep-software
    , brick >= 0.50

test-suite             deep-software
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:
      Dep.CoreTest
    , Dep.Algorithm.SynthesisSpec
    , Dep.Data.ProductSpec
    , Dep.Data.SumSpec
    , Dep.Data.ThreeSpec
    , Dep.Data.ThreeValueSpec
  build-depends:
      base
    , binary >= 0.2
    , blaze-markup >= 0.5.0.0
    , dep-software
    , hspec ==2.*
    , QuickCheck >=2.13 && <2.14
  build-tool-depends:
      hspec-discover:hspec-discover == 2.*
    , liquidhaskell:liquidhaskell >=0.8.10
  default-language:    Haskell2010
  default-extensions:
      BlockArguments
    , OverloadedStrings
  ghc-options:       -Wall -Wcompat -Wcompat
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints

